--- a/create_user.yml
+++ b/create_user.yml
@@ -1,5 +1,7 @@
 ---
-- hosts: all
+- name: Creating User
+  hosts: all
   become: true
   tasks:
-  - user: name=Gaurav
+  - name: Creating user Gaurav
+    user: name=Gaurav
