--- a/install_httpd_different_flavor.yml
+++ b/install_httpd_different_flavor.yml
@@ -51,3 +51,66 @@
       copy: 
         src: /home/ansadmin/index.html
         dest: /var/www/html
+        
+
+
+
+
+# Installing packages on different flavor of linux server at the same time
+
+---
+- name: Installing Package
+  hosts: all
+  gather_facts: yes
+  become: true
+
+  tasks:
+    - name: Installing the apache on Linux Server
+      yum:
+        name: httpd
+        state: installed
+      when: ansible_os_family == "RedHat"
+
+    - name: Starting the service of Apache on Linux Server
+      service:
+        name: httpd
+        state: restarted
+      when: ansible_os_family == "RedHat"
+
+    - name: Enabled the Service
+      service:
+        name: httpd
+        enabled: yes
+      when: ansible_os_family == "RedHat"
+
+    - name: Copying file on Linux
+      copy:
+        src: /home/ansadmin/index.html
+        dest: /var/www/html
+
+    - name: Updating Ubuntu System
+      apt:
+        update_cache: yes
+
+    - name: Installing the apache on Ubuntu
+      apt:
+        name: apache2
+        state: present
+      when: ansible_os_family == "Debian"
+
+    - name: Starting the service of apache
+      service:
+        name: apache2
+        state: restarted
+      when: ansible_os_family == "Debian"
+
+    - name: Enabled the Service
+      service:
+        name: apache2
+        enabled: yes
+      when: ansible_os_family == "Debian"
+
+    - name: Copying index.html
+      copy:
+        src: /home/ansadmin/index.html
+        dest: /var/www/html
